RESOLVED FIXED96191
[V8] unsafeHandleToCurrentWorldContext doesn't need to exist
https://bugs.webkit.org/show_bug.cgi?id=96191
Summary [V8] unsafeHandleToCurrentWorldContext doesn't need to exist
Adam Barth
Reported 2012-09-08 23:18:33 PDT
[V8] unsafeHandleToCurrentWorldContext doesn't need to exist
Attachments
Patch (3.03 KB, patch)
2012-09-08 23:19 PDT, Adam Barth
no flags
Adam Barth
Comment 1 2012-09-08 23:19:59 PDT
Kentaro Hara
Comment 2 2012-09-08 23:21:59 PDT
Comment on attachment 162978 [details] Patch LGTM
WebKit Review Bot
Comment 3 2012-09-08 23:47:51 PDT
Comment on attachment 162978 [details] Patch Clearing flags on attachment: 162978 Committed r127976: <http://trac.webkit.org/changeset/127976>
WebKit Review Bot
Comment 4 2012-09-08 23:47:54 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.