[V8] unsafeHandleToCurrentWorldContext doesn't need to exist https://bugs.webkit.org/show_bug.cgi?id=96191

Reviewed by Kentaro Hara.

Previously, we used this function when instantiating DOM wrappers. Now
we get the context from the creationContext, so we don't need access to
this unsafe handle. This patch inlines the function into its one other
caller.

* bindings/v8/ScriptController.cpp:
(WebCore::ScriptController::currentWorldContext):
* bindings/v8/ScriptController.h:
(ScriptController):


Canonical link: https://commits.webkit.org/114074@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@127976 268f45cc-cd09-0410-ab3c-d52691b4dbfc